--- a/Examsystem/Examsystem.csproj
+++ b/Examsystem/Examsystem.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Admin\Add.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Admin\Results.cshtml" />
+    <Content Include="Views\User\Results.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
